--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body{
+  background-color: red;
+}
 .box-modal {
   position: fixed;
   z-index: 1;
@@ -22,8 +25,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #fdfcdc;
+  background-color: #c5c1c0;
   border-radius: 10px;
+  border: solid;
   text-align: center;
 }
 
