--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,56 +1,60 @@
 .card-Paletas {
-  width: 23%;
-  height: 43vh;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 1%;
-  flex-direction: column;
-  margin-bottom: 2%;
-  border-radius: 10px;
-  background-color: #fed9b7;
-  box-shadow: 5px 5px 10px #747474, -5px -5px 10px #ffffff;
+    width: 15em;
+    height: 43vh;
+    display: flex;
+    /* flex-wrap: wrap; */
+    padding: 1%;
+    flex-direction: column;
+    margin-bottom: 2%;
+    border-radius: 10px;
+    background-color: #049ba8;
+    box-shadow: 1px 1px 5px #c5c1c0, -1px -1px 5px #c5c1c0;
 }
 .card-Paletas > h3 {
-  font-size: 1.1em;
-  margin: 0%;
+    font-size: 1.1em;
+    margin: 0%;
 }
 .card-Paletas > .description {
-  width: 80%;
-  margin: 0%;
-  text-align: justify;
-  margin-left: 5%;
-  font-size: 0.8em;
+    width: 18em;
+    height: 4em;
+    margin: 0%;
+    text-align: justify;
+    font-size: 0.8em;
 }
 .card-Paletas > img {
-  width: 25%;
-  margin-left: 40%;
-}
+    width: 8em;
+    height: 10em;
+    display: flex;
+    margin: 0px 0px 10px 50px;
+  }
 .card-Paletas > p {
-  font-size: 1em;
+    font-size: 1em;
 }
 
 .card-Paletas > .buttons {
-  width: 100%;
-  height: 10%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 3%;
-  margin-top: 5%;
+    width: 20em;
+    height: 3.5em;
+    margin-left: 9em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 3%;
+    position: absolute;
+    /* margin-top: 5%; */
 }
 .card-Paletas > .buttons > button {
-  width: 30%;
-  height: 80%;
-  font-family: "Rye", cursive;
-  cursor: pointer;
-  background-color: #fdfcdc;
-  border-radius: 10px;
+    width: 30%;
+    height: 80%;
+    font-family: "Rye", cursive;
+    cursor: pointer;
+    background-color: #dddddd;
+    border-radius: 10px;
 }
 /* Responsividade */
 
 @media (max-width: 912px) {
-  .card-Paletas {
-    width: 100%;
-    margin-bottom: 10%;
-  }
+    .card-Paletas {
+        width: 15em;
+        margin-bottom: 10%;
+    }
 }
