--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,12 +1,16 @@
+footer{
+  display: flex;
+  justify-content: center;
+}
 .rodape {
   margin-top: 2%;
-  width: 100%;
+  width: 99%;
   height: 15%;
   display: flex;
   justify-content: space-around;
   border-radius: 30px 30px 0px 0px;
-  background-color: #fdfcdc;
-  box-shadow: 23px 23px 46px #949494, -23px -23px 46px #ffffff;
+  background-color: #c5c1c0;
+  box-shadow: 0px 0px 0px black, -2px -0px 50px black;
 }
 
 .rodape img {
