--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -1,54 +1,62 @@
+main{
+    display: flex;
+    justify-content: center;
+}
 main .conteudo {
-  width: 99%;
-  min-height: 80%;
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 2%;
-  border-radius: 20px;
-  margin-left: 0.5%;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+    width: 99%;
+    min-height: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 2%;
+    border-radius: 20px;
+    background-color: #1a2930;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 
 .conteudo > .Sub-titulo {
-  width: 100%;
-  height: 10%;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 3%;
-  font-size: 1em;
+    color: #c5c1c0;
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    font-size: 1em;
 }
 
 .conteudo > .container-paletas {
-  width: 100%;
-  height: 90%;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 5%;
+    width: 100%;
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 5%;
 }
 
 .conteudo > .busca-paletas {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 3%;
-  width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1em;
+    width: 100%;
 }
 
 .conteudo > .busca-paletas input {
-  border-radius: 10px;
-  font-family: "Rye", cursive;
-  padding: 8px;
+    border-radius: 10px;
+    font-family: "Rye", cursive;
+    padding: 8px;
 }
 
 /* Responsividade  */
 
 @media (max-width: 900px) {
-  main .conteudo {
-    justify-content: center;
-  }
-  .conteudo > .container-paletas {
-    flex-direction: column;
-    width: 60%;
-  }
+    main .conteudo {
+        justify-content: center;
+    }
+    .conteudo > .container-paletas {
+        width: 50em;
+        height: 90%;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 5%;
+    }
 }
