--- a/src/components/Modals/DeleteIceCream/style.css
+++ b/src/components/Modals/DeleteIceCream/style.css
@@ -3,8 +3,9 @@
   height: 20%;
   display: flex;
   flex-direction: column;
-  background-color: #fdfcdc;
+  background-color: #c5c1c0;
   border-radius: 10px;
+  border: solid;
   text-align: center;
 }
 .buton-modal-excluir1 {
