--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 body{
   background-color: red;
+  display: block;
+  justify-content: center;
+  align-items: center;
 }
 .box-modal {
   position: fixed;
