--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -7,7 +7,7 @@ footer{
   width: 99%;
   height: 15%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   border-radius: 30px 30px 0px 0px;
   background-color: #c5c1c0;
   box-shadow: 0px 0px 0px black, -2px -0px 50px black;
