--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -1,14 +1,17 @@
-main{
+main {
+    margin: 0;
+    border: 0;
     display: flex;
     justify-content: center;
 }
-main .conteudo {
-    width: 99%;
-    min-height: 80%;
+main > .conteudo {
+    width: 98%;
+    /* min-height: 80%; */
     display: flex;
     flex-wrap: wrap;
     margin-top: 2%;
     border-radius: 20px;
+    border: solid;
     background-color: #1a2930;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
@@ -27,7 +30,7 @@ main .conteudo {
     height: 90%;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     gap: 5%;
 }
 
